Socket fixes and tests for DRb

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -97,6 +97,7 @@ CallerTest.rb
 EnumerableTest.rb
 testTopSelf.rb
 PersistentCounterTest.rb
+SocketTest.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
