Add tests for Fcntl and Socket

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -98,6 +98,7 @@ EnumerableTest.rb
 testTopSelf.rb
 PersistentCounterTest.rb
 SocketTest.rb
+FcntlTest.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
