--- a/src/experimental/mdb/mdb/Rakefile
+++ b/src/experimental/mdb/mdb/Rakefile
@@ -1,9 +1,9 @@
 task :default => :commit
 
-#ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
+ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
+#ENV['MAGLEV_OPTS'] = '-Ilib -d'
 #ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib -MtraceLoad'
 #ENV['MAGLEV_OPTS'] = '-Ilib -d -MtraceLoad'
-ENV['MAGLEV_OPTS'] = '-Ilib -d'
 
 # desc "Commit the MDB Server code to the repository."
 # task :commit, :force do |t,args|
@@ -30,7 +30,7 @@ namespace :test do
 
   desc "Run the MDB::* tests."
   task :mdb => [:commit, :mdb_fixtures] do
-    ['database_tests.rb', 'server_tests.rb'].each do |test|
+    ['server_tests.rb', 'database_tests.rb'].each do |test|
       sh %{ maglev-ruby -Itest test/#{test} }
     end
   end
