--- a/src/experimental/mdb/mdb/Rakefile
+++ b/src/experimental/mdb/mdb/Rakefile
@@ -15,7 +15,7 @@ task :commit do
 end
 
 desc "Run tets: requires rubygems installed and a patched minitest gem"
-task :test => [:'test:mdb', :'test:json', :'test:persistence']
+task :test => [:'test:mdb', :'test:persistence', :'test:server']  # :'test:json',
 
 namespace :test do
   desc "Run the persistence tests."
@@ -30,20 +30,23 @@ namespace :test do
     end
   end
 
-
+  desc "Load fixtures for MDB::* tests"
   task :mdb_fixtures do
     sh %{ maglev-ruby -MnoRlwrap test/mdb_fixtures.rb }
   end
 
+  desc "Load fixtures for mdb_server tests"
+  task :mdb_server_fixtures do
+    sh %{ maglev-ruby -MnoRlwrap test/app_model.rb }
+  end
+
   # Test for the (new) Marshal based server
+
   desc "Test the Marshal server"
   task :server => :'test:server:server'
   namespace :server do
-    task :fixtures do
-      sh %{ maglev-ruby -MnoRlwrap test/json_server/fixtures.rb }
-    end
-    task :server => [:commit, :fixtures] do
-      sh 'maglev-ruby -Itest test/json_server/mdb_server_tests.rb'
+    task :server => [:commit, :mdb_server_fixtures] do
+      sh 'maglev-ruby -Itest test/mdb_server_tests.rb marshal'
     end
   end
 
@@ -52,11 +55,8 @@ namespace :test do
   desc "Test the json server"
   task :json => :'test:json:server'
   namespace :json do
-    task :fixtures do
-      sh %{ maglev-ruby -MnoRlwrap test/json_server/fixtures.rb }
-    end
-    task :server => [:commit, :fixtures] do
-      sh 'maglev-ruby -Itest test/json_server/mdb_server_tests.rb'
+    task :server => [:commit, :mdb_server_fixtures] do
+      sh 'maglev-ruby -Itest test/server/mdb_server_tests.rb json'
     end
   end
 end
