--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -216,6 +216,7 @@ Trac611.rb
 Trac612.rb
 Trac613.rb
 Trac616.rb
+Trac618.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
