--- a/src/experimental/mdb/mdb/Rakefile
+++ b/src/experimental/mdb/mdb/Rakefile
@@ -1,7 +1,7 @@
 task :default => :commit
 
-ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
-#ENV['MAGLEV_OPTS'] = '-Ilib -d'
+#ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
+ENV['MAGLEV_OPTS'] = '-Ilib -d'
 
 desc "Commit the MDB Server code to the repository."
 task :commit do
