--- a/src/experimental/mdb/app/Rakefile
+++ b/src/experimental/mdb/app/Rakefile
@@ -17,8 +17,9 @@ namespace :app do
   desc "Clear out the posts and tags dbs"
   task :cleardb do
     cmd =<<-EOS
-      'MDB::Server["theBlogPosts"].clear
-      MDB::Server["theBlogTags"].clear
+      'server = MDB::Server.server
+      server["theBlogPosts"].clear
+      server["theBlogTags"].clear
       Maglev.commit_transaction'
     EOS
     p cmd
