--- a/src/experimental/mdb/Rakefile
+++ b/src/experimental/mdb/Rakefile
@@ -7,12 +7,12 @@ desc "Install necessary RubyGems into MagLev and MRI"
 task :install_gems do
   maglev_gems = "rack sinatra minitest"
   puts "-- Installing gems into MagLev: #{maglev_gems}"
-  sh %{ maglev-gem install #{maglev_gems} }
+  sh "maglev-gem install #{maglev_gems}"
 
 
   mri_gems    = "rack sinatra minitest httpclient"
   puts "-- Installing gems into MRI: #{mri_gems}"
-  sh %{ gem install #{mri_gems} }
+  sh "gem install #{mri_gems}"
 end
 
 desc "Commit MaglevDB server code into repository"
