--- a/examples/mdb/mdb/Rakefile
+++ b/examples/mdb/mdb/Rakefile
@@ -50,7 +50,8 @@ end
 namespace :server do
   desc "Start the mdb_server app"
   task :start => :commit do
-    sh %{ $MAGLEV_HOME/bin/rackup server.ru }
+#    sh %{ $MAGLEV_HOME/bin/rackup server.ru }
+    sh %{ $MAGLEV_HOME/bin/rackup config.ru }
   end
 
   desc "List the databases in the server"
