--- a/examples/sinatra/simple_blog/Rakefile
+++ b/examples/sinatra/simple_blog/Rakefile
@@ -1,26 +1,16 @@
 # Rake file for running sinatra apps and committing code to maglev.
 # Default is to commit code (if necessary) and run both apps
 
-task :default => :both
+task :default => :blog
 
 desc "Commit the base blog code to the repository."
 task :commit, :force do |t,args|
   sh %{ maglev-ruby -MnoRlwrap commit_code.rb #{args.force} }
 end
 
-desc "Run both apps (blog, objectlog), committing the blog code if necessary."
-task :both => :commit do
-  sh %{ $MAGLEV_HOME/bin/rackup }
-end
-
-desc "Run the objectlog app standalone."
-task :objectlog  do
-  sh %{ $MAGLEV_HOME/bin/rackup objectlog.ru }
-end
-
-desc "Run the blog app standalone, committing the blog code if necessary"
+desc "Run the blog app, committing the blog code if necessary"
 task :blog => :commit do
-  sh %{ $MAGLEV_HOME/bin/rackup blog.ru }
+  sh %{ $MAGLEV_HOME/bin/rackup config.ru }
 end
 
 "Run tets: requires rubygems installed and a patched minitest gem"
