Expose RubyCompiler to ruby code (for migrations)

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -99,6 +99,7 @@ testTopSelf.rb
 PersistentCounterTest.rb
 SocketTest.rb
 FcntlTest.rb
+RubyCompilerTest.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
