--- a/src/experimental/mdb/Rakefile
+++ b/src/experimental/mdb/Rakefile
@@ -3,7 +3,8 @@ task :default => :'test:migration'
 namespace :test do
   desc "Test the migrations code"
   task :migration do
-    sh "maglev-ruby -Ilib test/migration_tests.rb"
+    sh "maglev-ruby -d -Ilib test/migration_tests.rb"
+    #sh "maglev-ruby -d -Ilib test/x.rb"
 # puts "========== WARNING: Running with ruby: change to maglev-ruby ====="
 #    sh "ruby -Ilib test/migration_tests.rb"
   end
