--- a/src/experimental/kdtree/Rakefile
+++ b/src/experimental/kdtree/Rakefile
@@ -1,12 +1,12 @@
-
 task :default => :test
+
+ENV['MAGLEV_OPTS'] = ""
 
 desc "Test Tree2D class"
 task :test do
-  #  sh "maglev-ruby -I lib test/tree2d_tests.rb"
   puts "=== TODO: Change from ruby -> maglev-ruby"
-  sh "ruby -I lib test/point_tests.rb"
-  sh "ruby -I lib test/tree2d_tests.rb"
+  sh "maglev-ruby -I lib test/point_tests.rb"
+  sh "maglev-ruby -I lib test/tree2d_tests.rb"
 end
 
 task :bench do
