--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -159,6 +159,7 @@ Trac390.rb
 Trac391.rb
 Trac392.rb
 Trac393.rb
+Trac422.rb
 Trac425.rb
 Trac432.rb
 Trac435.rb
@@ -167,6 +168,7 @@ Trac440.rb
 Trac445.rb
 Trac447.rb
 Trac449.rb
+Trac489.rb
 Trac450.rb
 Trac453.rb
 Trac454.rb
@@ -174,6 +176,7 @@ Trac462.rb
 Trac463.rb
 Trac464.rb
 Trac465.rb
+Trac484.rb
 Trac486.rb
 Trac496.rb
 Trac498.rb
@@ -185,6 +188,7 @@ Trac503.rb
 Trac504.rb
 Trac506.rb
 Trac507.rb
+# Trac510.rb # an interactive test only
 Trac512.rb
 Trac514.rb
 Trac519.rb
@@ -219,6 +223,8 @@ Trac612.rb
 Trac613.rb
 Trac616.rb
 Trac618.rb
+Trac622.rb
+Trac629.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
