Fixed tests. New files

--- a/src/experimental/kdtree/Rakefile
+++ b/src/experimental/kdtree/Rakefile
@@ -5,8 +5,11 @@ ENV['MAGLEV_OPTS'] = ""
 desc "Test Tree2D class"
 task :test do
   puts "=== TODO: Change from ruby -> maglev-ruby"
-  sh "ruby -I lib test/point_tests.rb"
-  sh "ruby -I lib test/tree2d_tests.rb"
+  Dir.glob('test/*_tests.rb').each do |t|
+    sh "ruby -I lib #{t}"
+  end
+#
+#   sh "ruby -I lib test/tree2d_tests.rb"
 end
 
 task :bench do
