--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -225,6 +225,7 @@ Trac616.rb
 Trac618.rb
 Trac622.rb
 Trac629.rb
+Trac630.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
