--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -100,6 +100,7 @@ PersistentCounterTest.rb
 SocketTest.rb
 FcntlTest.rb
 RubyCompilerTest.rb
+SystemTest.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
