--- a/src/experimental/kdtree/Rakefile
+++ b/src/experimental/kdtree/Rakefile
@@ -12,6 +12,17 @@ task :test do
 #   sh "ruby -I lib test/tree2d_tests.rb"
 end
 
+#task :demo => :migrate do
+desc "Run the migrations and the demo web app"
+#task :demo => :migrate do
+task :demo  do
+  sh "#{ENV['MAGLEV_HOME']}/bin/rackup config.ru"
+end
+
+desc "Create and commit the persistent data for the demo app"
+task :migrate do
+  sh "maglev-ruby -I lib migration.rb"
+end
 task :bench do
   #sh "ruby -r profile -I lib test/benchmark.rb"
   sh "ruby -I lib test/benchmark.rb"
