--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -227,6 +227,7 @@ Trac618.rb
 Trac622.rb
 Trac629.rb
 Trac630.rb
+Trac632.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
