maglev-ruby now does not use rlwrap by default; use -Mrlwrap to turn it on

--- a/examples/sinatra/object_inspector/Rakefile
+++ b/examples/sinatra/object_inspector/Rakefile
@@ -5,7 +5,7 @@ task :default => :objectlog
 
 desc "Commit the base blog code to the repository."
 task :commit, :force do |t,args|
-  sh %{ maglev-ruby -MnoRlwrap commit_code.rb #{args.force} }
+  sh %{ maglev-ruby commit_code.rb #{args.force} }
 end
 
 desc "Run the objectlog app standalone."
