--- a/examples/mdb/mdb/Rakefile
+++ b/examples/mdb/mdb/Rakefile
@@ -1,11 +1,10 @@
 task :default => :commit
 
 ENV['MAGLEV_OPTS'] = '-Ilib -d'
-#ENV['MAGLEV_OPTS'] = '-MnoRlwrap -Ilib'   # Get rid of -d etc.
 
 desc "Commit the MDB Server code to the repository."
 task :commit do
-  sh 'maglev-ruby -MnoRlwrap commit_code.rb'
+  sh 'maglev-ruby  commit_code.rb'
 end
 
 desc "Run tets: requires rubygems installed and a patched minitest gem"
@@ -31,12 +30,12 @@ namespace :test do
 
   desc "Load fixtures for MDB::* tests"
   task :mdb_fixtures do
-    sh "maglev-ruby -MnoRlwrap test/mdb_fixtures.rb"
+    sh "maglev-ruby test/mdb_fixtures.rb"
   end
 
   desc "Load fixtures for mdb_server tests"
   task :mdb_server_fixtures do
-    sh "maglev-ruby -MnoRlwrap test/mdb_server_fixtures.rb"
+    sh "maglev-ruby test/mdb_server_fixtures.rb"
   end
 
   # Test for the (new) Marshal based server
@@ -56,7 +55,7 @@ namespace :server do
   desc "Start the mdb_server app"
   task :start => :commit do
 #    sh %{ $MAGLEV_HOME/bin/rackup server.ru }
-    sh %{ MAGLEV_OPTS='-d -MnoRlwrap' $MAGLEV_HOME/bin/rackup config.ru }
+    sh %{ MAGLEV_OPTS='-d' $MAGLEV_HOME/bin/rackup config.ru }
   end
 
   desc "List the databases in the server"
