--- a/examples/sinatra/simple_blog/Rakefile
+++ b/examples/sinatra/simple_blog/Rakefile
@@ -5,7 +5,7 @@ task :default => :blog
 
 desc "Commit the base blog code to the repository."
 task :commit, :force do |t,args|
-  sh %{ maglev-ruby -MnoRlwrap commit_code.rb #{args.force} }
+  sh %{ maglev-ruby commit_code.rb #{args.force} }
 end
 
 desc "Run the blog app, committing the blog code if necessary"
@@ -16,7 +16,7 @@ end
 "Run tets: requires rubygems installed and a patched minitest gem"
 task :tests => :commit do
   Dir.glob("test/*_tests.rb") do |t|
-    sh %{ maglev-ruby -MnoRlwrap #{t} }
+    sh %{ maglev-ruby #{t} }
   end
 end
 
