add syntaxErrorsTest.rb, enable 634

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -101,6 +101,7 @@ SocketTest.rb
 FcntlTest.rb
 RubyCompilerTest.rb
 SystemTest.rb
+syntaxErrorsTest.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
@@ -228,6 +229,7 @@ Trac622.rb
 Trac629.rb
 Trac630.rb
 Trac632.rb
+Trac634.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
