--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -230,6 +230,7 @@ Trac629.rb
 Trac630.rb
 Trac632.rb
 Trac634.rb
+Trac638.rb
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
