More Gprof support.  Add ability to suspend and resume sampling.  Requires mcz pbm.1074.

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -102,6 +102,7 @@ FcntlTest.rb
 RubyCompilerTest.rb
 SystemTest.rb
 syntaxErrorsTest.rb
+GprofTest.rb
 # IdentitySetIndexingTest.rb
 # Regression tests for fixed bugs
 Trac86.rb
