--- a/src/experimental/web/lighttpd.conf
+++ b/src/experimental/web/lighttpd.conf
@@ -23,12 +23,13 @@ debug.log-file-not-found   = "enable"
 
 static-file.exclude-extensions = ( ".rb", ".scgi" )
 
-scgi.server = ( ".scgi" =>
+# Mount the Sinatra app on '/'
+scgi.server = ( "/" =>
               ( "localhost" =>
                 ("host" => "127.0.0.1",
                  "port" => 4567,
                  "check-local" => "disable")))
 
-scgi.debug = 1
+scgi.debug = 0
 status.status-url = "/server-status"
 
