Tweak files for web

--- a/src/experimental/web/lighttpd.conf
+++ b/src/experimental/web/lighttpd.conf
@@ -16,10 +16,10 @@ mimetype.assign = (
   ".png"  => "image/png"
 )
 
-debug.log-request-header   = "enable"
-debug.log-response-header  = "enable"
-debug.log-request-handling = "enable"
-debug.log-file-not-found   = "enable"
+# debug.log-request-header   = "enable"
+# debug.log-response-header  = "enable"
+# debug.log-request-handling = "enable"
+# debug.log-file-not-found   = "enable"
 
 static-file.exclude-extensions = ( ".rb", ".scgi" )
 
