--- a/src/experimental/web/Rakefile
+++ b/src/experimental/web/Rakefile
@@ -17,8 +17,8 @@ task :server => 'log' do
   sh '/opt/local/sbin/lighttpd -D -f lighttpd.conf '
 end
 
-desc "Run Apache Bench against the server + maglev"
-task :ab do
+desc "Run Apache Bench against the server + maglev and profile output."
+task :abprof do
   sh 'curl http://localhost:3000/start'
   # ab options:
   #     -k   use keep alive
@@ -28,4 +28,13 @@ task :ab do
 #  sh 'ab -kc 10 -t 40 http://127.0.0.1:3000/foo.scgi'
   sh 'curl http://localhost:3000/stop'
   sh 'curl http://localhost:3000/report'
+end
+
+desc "Run Apache Bench against the server"
+task :ab do
+  # ab options:
+  #     -k   use keep alive
+  #     -c   concurrency level
+  #     -t   time limit (max number of seconds)
+  sh 'ab -c 1 -t 10 http://127.0.0.1:3000/foo.scgi'
 end
