enable 641 , move testMarshal.rb to end of file.

--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -45,7 +45,6 @@ NamespaceTest.rb
 CaseTest.rb
 #  RP not biasing line numbers yet because using byte offsets...
 # testEvalLineNumber.rb
-testMarshal.rb
 testMassign.rb
 # tests that   require  simple.rb
 InvokeTest.rb
@@ -232,6 +231,8 @@ Trac630.rb
 Trac632.rb
 Trac634.rb
 Trac638.rb
+Trac641.rb
+testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
 # need to have the smalltalk wrappers generated for SmalltalkFFITest
