--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -232,6 +232,8 @@ Trac632.rb
 Trac634.rb
 Trac638.rb
 Trac641.rb
+Trac641a.rb
+Trac645.rb
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
