--- a/src/test/vmunit.conf
+++ b/src/test/vmunit.conf
@@ -235,6 +235,7 @@ Trac638.rb
 Trac641.rb
 Trac641a.rb
 Trac645.rb
+Trac649.rb
 testMarshal.rb   # after other coverage of Hash
 # PopularApplications loads webrick, etc
 PopularApplications.rb
